# fcmp-plus-plus-optimization-competition-private

./: README.md
ec-divisors-contest/: Cargo.toml  README.md
ec-divisors-contest/benches/: divisors.rs
ec-divisors-contest/ec-divisors-contest-src/: Cargo.toml
ec-divisors-contest/ec-divisors-contest-src/src/: lib.rs  poly.rs
ec-divisors-contest/src/: lib.rs  main.rs
ec-divisors-contest/tests/: divisors.rs
helioselene-contest/: Cargo.toml  README.md
helioselene-contest/benches/: helioselene.rs
helioselene-contest/helioselene-contest-src/: Cargo.toml
helioselene-contest/helioselene-contest-src/src/: backend.rs  field.rs  inverse.rs  lib.rs  point.rs
helioselene-contest/src/: lib.rs  main.rs
helioselene-contest/tests/: helioselene.rs
