[package]
name = "ec-divisors-contest"
version = "0.1.0"
edition = "2021"

[dependencies]
ec-divisors = { git = "https://github.com/kayabaNerve/fcmp-plus-plus", version = "0.1", features = ["ed25519"] }
ec-divisors-contest-src = { path = "./ec-divisors-contest-src", version = "0.1" }

rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
getrandom = { version = "0.2", features = ["custom"]}
rand_chacha = { version = "0.3", default-features = false }

ciphersuite = { git = "https://github.com/kayabaNerve/fcmp-plus-plus", version = "0.4", features = ["ed25519"] }
dalek-ff-group = { git = "https://github.com/kayabaNerve/fcmp-plus-plus", default-features = false }

zeroize = { version = "^1.5", default-features = false, features = ["zeroize_derive"] }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "divisors"
harness = false

[lib]
crate-type = ["cdylib", "rlib"]
