[package]
name = "ec-divisors-contest-src"
version = "0.1.0"
description = "A library for calculating elliptic curve divisors"
license = "MIT"
repository = "https://github.com/kayabaNerve/fcmp-plus-plus/tree/develop/crypto/divisors"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["ciphersuite", "ff", "group"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
std-shims = { git = "https://github.com/kayabaNerve/fcmp-plus-plus", version = "^0.1.1", default-features = false }

rand_core = { version = "0.6", default-features = false }
zeroize = { version = "^1.5", default-features = false, features = ["zeroize_derive"] }

subtle = { version = "2", default-features = false }
ff = { version = "0.13", default-features = false, features = ["bits"] }
group = { version = "0.13", default-features = false }

hex = { version = "0.4", default-features = false }
dalek-ff-group = { git = "https://github.com/kayabaNerve/fcmp-plus-plus", default-features = false }
pasta_curves = { version = "0.5", git = "https://github.com/kayabaNerve/pasta_curves.git", default-features = false, features = ["bits", "alloc"], optional = true }

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }

hex = "0.4"
dalek-ff-group = { git = "https://github.com/kayabaNerve/fcmp-plus-plus", features = ["std"] }
pasta_curves = { version = "0.5", git = "https://github.com/kayabaNerve/pasta_curves.git", default-features = false, features = ["bits", "alloc"] }

[features]
std = ["std-shims/std", "zeroize/std", "subtle/std", "ff/std"]
pasta = ["pasta_curves"]
default = ["std"]
