[package]
name = "helioselene-contest-src"
version = "0.1.0"
description = "Implementation of Helios and Selene, a curve cycle towering Ed25519"
license = "MIT"
repository = "https://github.com/kayabaNerve/fcmp-plus-plus/tree/develop/crypto/helioselene"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["helios", "selene", "ed25519", "ff", "group"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rustversion = "1"

rand_core = { version = "0.6", default-features = false }

zeroize = { version = "^1.5", default-features = false, features = ["zeroize_derive"] }
subtle = { version = "^2.4", default-features = false }

ff = { version = "0.13", default-features = false, features = ["bits"] }
group = { version = "0.13", default-features = false }

crypto-bigint = { version = "0.5", default-features = false, features = ["zeroize"] }

dalek-ff-group = { git = "https://github.com/kayabaNerve/fcmp-plus-plus", version = "0.4.1", default-features = false }

ec-divisors = { git = "https://github.com/kayabaNerve/fcmp-plus-plus", default-features = false }

[dev-dependencies]
hex = "0.4"

rand_core = { version = "0.6", features = ["std"] }

ff-group-tests = { git = "https://github.com/kayabaNerve/fcmp-plus-plus" }

[features]
std = [
  "rand_core/std",

  "zeroize/std",
  "subtle/std",

  "ff/std",

  "dalek-ff-group/std",

  "ec-divisors/std",
]
default = ["std"]
